@@ -1,5 +1,7 @@
 package top.lqsnow.blockracing.commands;
 
+import io.papermc.paper.registry.RegistryAccess;
+import io.papermc.paper.registry.RegistryKey;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -11,7 +13,6 @@ import org.jetbrains.annotations.Nullable;
 import top.lqsnow.blockracing.Main;
 import top.lqsnow.blockracing.managers.Message;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static top.lqsnow.blockracing.managers.Game.locateCommandPermission;
@@ -23,12 +24,17 @@ public class LocateStructure implements CommandExecutor, TabCompleter {
             Bukkit.getLogger().info("This command can only be run by a player.");
             return true;
         }
+        if (args.length != 1) {
+            player.sendMessage(Message.NOTICE_ERROR_COMMAND.getString(player));
+            return true;
+        }
 
         if (locateCommandPermission.contains(player.getName())) {
-            player.performCommand("locate structure " + args[0]);
-            locateCommandPermission.remove(player.getName());
-            player.addAttachment(Main.getInstance(), "minecraft.command.locate", false);
-        } else player.sendMessage(Message.NOTICE_LOCATE_NO_PERMISSION.getString());
+            if (player.performCommand("locate structure " + args[0])) {
+                locateCommandPermission.remove(player.getName());
+                player.addAttachment(Main.getInstance(), "minecraft.command.locate", false);
+            }
+        } else player.sendMessage(Message.NOTICE_LOCATE_NO_PERMISSION.getString(player));
 
         return true;
     }
@@ -36,6 +42,15 @@ public class LocateStructure implements CommandExecutor, TabCompleter {
     @Nullable
     @Override
     public List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, @NotNull String[] strings) {
-        return Arrays.asList("ancient_city", "buried_treasure", "end_city", "fortress", "mansion", "mineshaft", "mineshaft_mesa", "monument", "ocean_ruin_cold", "ocean_ruin_warm", "shipwreck", "shipwreck_beached", "stronghold", "desert_pyramid", "igloo", "jungle_pyramid", "swamp_hut", "village_desert", "village_plains", "village_savanna", "village_snowy", "village_taiga", "pillager_outpost", "nether_fossil", "bastion_remnant", "ruined_portal", "ruined_portal_desert", "ruined_portal_jungle", "ruined_portal_mountain", "ruined_portal_ocean", "ruined_portal_swamp", "ruined_portal_nether", "trial_chambers");
+        if (strings.length != 1) {
+            return List.of();
+        }
+        String prefix = strings[0].toLowerCase();
+        return RegistryAccess.registryAccess().getRegistry(RegistryKey.STRUCTURE).keyStream()
+                .filter(key -> key.getNamespace().equals("minecraft"))
+                .map(key -> key.getKey())
+                .filter(key -> key.startsWith(prefix))
+                .sorted()
+                .toList();
     }
 }
